Bugs fixed final commit

--- a/test-2/test-2.html
+++ b/test-2/test-2.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Help! Where are my links?!</h1>
 <p>I'm supposed to have three links in this page-- one to the New York Times, one to CNN, and one to the LA Times. But they're all broken!!!</p>
-<ul><a href="https://www.nytimes.com">New York Times</a></ul>
-<ul><a href="https://cnn.com/">Cable News Network</a></ul>
-<ul><a href="http://www.latimes.com/">LA Times</a></ul>
+<a href="https://www.nytimes.com">New York Times</a>
+<a href="https://cnn.com/">Cable News Network</a>
+<a href="http://www.latimes.com/">LA Times</a>
     
 </body>
 </html>
