--- a/test-1/test-1.html
+++ b/test-1/test-1.html
@@ -8,27 +8,19 @@
   </head>
   <body>
   
-<h1>Which is better, ice cream or cake?<h1>
-    <h>Ice cream is obviously better than cake.<h>
-    <p>Ice cream is definitely better than cake! I think ice cream is better because:<p>
+<h1>Which is better, ice cream or cake?</h1>
+    <h>Ice cream is obviously better than cake.</h>
+    <p>Ice cream is definitely better than cake! I think ice cream is better because:</p>
     <ul>
       <li>It's cold and refreshing</li>
       <li>It comes in a bunch of great flavors</li>
       <li>It doesn't get stale</li>
       </ul>
-    <p>Also, ice cream is great because:<p>
+    <p>Also, ice cream is great because:</p>
     <ol>
       <li>You can buy it easily from any store</li>
       <li>You can put toppings on it</li>
       </ol>
-    </p>
-  </p>
-</p>
-</p>
-</h>
-</h>
-</h1>
-</h1>
 
     </body>
     </html>
